--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "xwartz <stddup@gmail.com>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/xwartz/open-app.git"
   },
   "license": "MIT",
   "engines": {
